Extracted the command reference from the white paper, updated with iOS 5 commands, and published as CommandReference.pdf.

--- a/Documentation/README
+++ b/Documentation/README
@@ -1,2 +1,4 @@
 InsideAppleMDM.pdf - August 2011 - White Paper in support of Black Hat USA 2011 presentation. Describes the protocol, documents most of the features I've figured out, etc.
 
+CommandReference.pdf - January 2012 - Appendix A from the white paper, describing all known commands and parameters. Updated to include new commands present in iOS 5.0.
+
